test/2/type/sub/CICIN-CICII.err
test/2/type/sub/CICIN-CICII.ploy:2:29-32: type error: annotated: actual type is not expected type. actual type: ()
|   _:(Int (Int Int)) = (0 (0 nil))
                              ~~~
test/2/type/sub/CICIN-CICII.ploy:2:15-18: note: expected type: Int
|   _:(Int (Int Int)) = (0 (0 nil))
                ~~~
